--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 CMakeUserPresets.json
+third_party/fmt
 
 # CLion
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
